force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <description>All the contract prepared &amp; signed with the supplier</description>
    <label>Contract</label>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>