force-app/main/default/objects/Contract__c/fields/Asynchron_Processing__c.field-meta.xml
<CustomField>
    <fullName>Asynchron_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asynchron Processing</label>
    <type>Checkbox</type>
</CustomField>