force-app/main/default/objects/Contract__c/fields/Autonum__c.field-meta.xml
<CustomField>
    <fullName>Autonum__c</fullName>
    <label>Autonum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>