force-app/main/default/objects/Contract__c/fields/BU_Source__c.field-meta.xml
<CustomField>
    <fullName>BU_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Define the level from where the contract is negotiated and signed (for CPG, internal orga layer in opposition to the client orga layer specifiied in Contract_bu)</description>
    <inlineHelpText>Précisez la BU en charge de la négociation et de la signature du contrat</inlineHelpText>
    <label>Dealing From</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>BU_Source__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Orga_BU__c.Set_Contract_BU_Source__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>Contrats1 (Dealing From)</relationshipLabel>
    <relationshipName>Contrats1</relationshipName>
    <type>Lookup</type>
</CustomField>