force-app/main/default/objects/Contract__c/fields/Buying_Payment_Term_Abbrev__c.field-meta.xml
<CustomField>
    <fullName>Buying_Payment_Term_Abbrev__c</fullName>
    <description>Synchronized from Default Sales Conditions and Sales Conditions Exception of the contract</description>
    <label>Payment Term for Purchase</label>
    <length>50</length>
    <type>Text</type>
</CustomField>