force-app/main/default/objects/Contract__c/fields/CompanySigned_Date__c.field-meta.xml
<CustomField>
    <fullName>CompanySigned_Date__c</fullName>
    <description>Define the date of signature of the contract by the company</description>
    <inlineHelpText>Précisez la date de signature du contrat</inlineHelpText>
    <label>Company Signed Date</label>
    <type>DateTime</type>
</CustomField>