force-app/main/default/objects/Contract__c/fields/Contract_Commercial_BDate__c.field-meta.xml
<CustomField>
    <fullName>Contract_Commercial_BDate__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()),1,1)</defaultValue>
    <description>Champ de type date permettant de stocker la vrai date du début du contrat</description>
    <label>Contract Commercial Begin Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>