force-app/main/default/objects/Contract__c/fields/Contract_Commercial_EDate__c.field-meta.xml
<CustomField>
    <fullName>Contract_Commercial_EDate__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()),12,31)</defaultValue>
    <description>Champ de type date permettant de stocker la vrai date de la fin du contrat</description>
    <label>Contract Commercial End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>