force-app/main/default/objects/Contract__c/fields/Contract_EDate__c.field-meta.xml
<CustomField>
    <fullName>Contract_EDate__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()),12,31)</defaultValue>
    <description>End date of the contract</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>