force-app/main/default/objects/Contract__c/fields/Contract_Number_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_Prefix__c</fullName>
    <description>Auto generated prefix used in contract number
Formula 1: RIGHT(TEXT(YEAR(Contract_EDate__c)), 2) &amp; LEFT(TEXT(Contract_Type__c ), 1) &amp; Contract_BU__r.ISO_Country_Code__c

Formula 2: TEXT(YEAR(Contract_BDate__c)) &amp; &apos;-&apos; &amp; LEFT(TEXT(Contract_Type__c ), 1) &amp; Contract_BU__r.BU_Code__c</description>
    <formula>TEXT(YEAR(Contract_BDate__c)) &amp; &apos;-&apos; &amp; LEFT(TEXT(Contract_Type__c ), 1) &amp; Contract_BU__r.BU_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number Prefix</label>
    <type>Text</type>
</CustomField>