force-app/main/default/objects/Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Simulation</fullName>
                <default>true</default>
                <label>Simulation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>