force-app/main/default/objects/Contract__c/fields/Default_Sales_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Default_Sales_Conditions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Default Policy for Sales conditions</description>
    <inlineHelpText>Reference to Default Policy for Sales conditions</inlineHelpText>
    <label>Default Sales Conditions</label>
    <referenceTo>Pol_Sale_Condition__c</referenceTo>
    <relationshipName>Nego_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>