force-app/main/default/objects/Contract__c/fields/Depreciation_Rate3__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Rate3__c</fullName>
    <label>Depreciation Rate3</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>