force-app/main/default/objects/Contract__c/fields/Depreciation_Rate_Exec_Date1__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Rate_Exec_Date1__c</fullName>
    <label>Depreciation Rate Exec Date1</label>
    <type>Date</type>
</CustomField>