force-app/main/default/objects/Contract__c/fields/Depreciation_Rate_Nb__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Rate_Nb__c</fullName>
    <formula>IF (ISBLANK(Depreciation_Rate1__c),0,1) + 
IF (ISBLANK(Depreciation_Rate2__c),0,1) + 
IF (ISBLANK(Depreciation_Rate3__c),0,1)</formula>
    <label>Depreciation Rate Nb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>