force-app/main/default/objects/Contract__c/fields/FlatPrice_Rate__c.field-meta.xml
<CustomField>
    <fullName>FlatPrice_Rate__c</fullName>
    <formula>Index2_perc__c + FlatPrice_Rate_Correction__c - Retention_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FlatPrice Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>