force-app/main/default/objects/Contract__c/fields/FlatPrice_Rate_Exec_Date__c.field-meta.xml
<CustomField>
    <fullName>FlatPrice_Rate_Exec_Date__c</fullName>
    <label>FlatPrice Rate Exec Date</label>
    <type>Date</type>
</CustomField>