force-app/main/default/objects/Contract__c/fields/FlatPrice_Rate_Promo__c.field-meta.xml
<CustomField>
    <fullName>FlatPrice_Rate_Promo__c</fullName>
    <formula>Index2_perc__c + FlatPrice_Rate_Promo_Correction__c - Retention_Rate_Promo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FlatPrice Rate Promo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>