force-app/main/default/objects/Contract__c/fields/FlatPrice_Rate_Promo_Correction__c.field-meta.xml
<CustomField>
    <fullName>FlatPrice_Rate_Promo_Correction__c</fullName>
    <label>FlatPrice Rate Promo Correction</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>