force-app/main/default/objects/Contract__c/fields/Index1__c.field-meta.xml
<CustomField>
    <fullName>Index1__c</fullName>
    <label>Index1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>