force-app/main/default/objects/Contract__c/fields/Index2__c.field-meta.xml
<CustomField>
    <fullName>Index2__c</fullName>
    <label>Index2</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>