force-app/main/default/objects/Contract__c/fields/Index3__c.field-meta.xml
<CustomField>
    <fullName>Index3__c</fullName>
    <label>Index3</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>