force-app/main/default/objects/Contract__c/fields/Index3_perc__c.field-meta.xml
<CustomField>
    <fullName>Index3_perc__c</fullName>
    <label>Index3 %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>