force-app/main/default/objects/Contract__c/fields/Index3_v2__c.field-meta.xml
<CustomField>
    <fullName>Index3_v2__c</fullName>
    <label>Index3 v2</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>