force-app/main/default/objects/Contract__c/fields/Integration_id_last__c.field-meta.xml
<CustomField>
    <fullName>Integration_id_last__c</fullName>
    <description>Give the last integration id for upsert of the line.</description>
    <inlineHelpText>Give the last integration id for upsert of the line.</inlineHelpText>
    <label>Last Integration id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>