force-app/main/default/objects/Contract__c/fields/Is_Conso_Requiered__c.field-meta.xml
<CustomField>
    <fullName>Is_Conso_Requiered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, will be monitored and considered in the conso batch. (Trigger make it to TRUE following contract / contract discount update)</description>
    <inlineHelpText>If TRUE, will be monitored and considered in the conso batch. (Trigger make it to TRUE following contract / contract discount update)</inlineHelpText>
    <label>Is Conso Requiered</label>
    <type>Checkbox</type>
</CustomField>