force-app/main/default/objects/Contract__c/fields/Is_Foreign_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Is_Foreign_Supplier__c</fullName>
    <formula>IF( AND(NOT(ISNULL(Supplier_Nego_Scope__r.Acc_Global_Location__c)), UPPER(Contract_BU__r.Country__c) &lt;&gt; UPPER(Supplier_Nego_Scope__r.Acc_Global_Location__r.Orga_BU__r.Country__c)), TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Foreign Supplier</label>
    <type>Checkbox</type>
</CustomField>