force-app/main/default/objects/Contract__c/fields/Is_TotalTo_Recalc_AfterDateChange__c.field-meta.xml
<CustomField>
    <fullName>Is_TotalTo_Recalc_AfterDateChange__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Run Total To recalculation trigger after contract change date</description>
    <label>Is TotalTo Recalc after DateChange</label>
    <type>Checkbox</type>
</CustomField>