force-app/main/default/objects/Contract__c/fields/IsForeignSupplier__c.field-meta.xml
<CustomField>
    <fullName>IsForeignSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify if country of the contract equal to the country of the NS or its VAT Linked Country</description>
    <inlineHelpText>Specify if countryu of the contract equal to the country of the NS or its VAT Linked Country</inlineHelpText>
    <label>Is Foreign Supplier</label>
    <type>Checkbox</type>
</CustomField>