force-app/main/default/objects/Contract__c/fields/IsPriceWaterfallRequested__c.field-meta.xml
<CustomField>
    <fullName>IsPriceWaterfallRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Price Waterfall Requested</label>
    <type>Checkbox</type>
</CustomField>