force-app/main/default/objects/Contract__c/fields/Markdown_Rate_Break__c.field-meta.xml
<CustomField>
    <fullName>Markdown_Rate_Break__c</fullName>
    <label>Markdown Rate (Break)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>