force-app/main/default/objects/Contract__c/fields/Markdown_Rate_Theft__c.field-meta.xml
<CustomField>
    <fullName>Markdown_Rate_Theft__c</fullName>
    <label>Markdown Rate (Theft)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>