force-app/main/default/objects/Contract__c/fields/Multi_Year_Index__c.field-meta.xml
<CustomField>
    <fullName>Multi_Year_Index__c</fullName>
    <defaultValue>1</defaultValue>
    <description>To calculate the index of contract in multi year context.</description>
    <label>Multi Year Index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>