force-app/main/default/objects/Contract__c/fields/New_TarifCost_Date__c.field-meta.xml
<CustomField>
    <fullName>New_TarifCost_Date__c</fullName>
    <label>New Tarif Cost Exec. Date</label>
    <type>Date</type>
</CustomField>