force-app/main/default/objects/Contract__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <label>Offer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My Offer</fullName>
                <default>true</default>
                <label>My Offer</label>
            </value>
            <value>
                <fullName>Their Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>