force-app/main/default/objects/Contract__c/fields/Parent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent contract linked to the contract (in case of addendum for exemple)</description>
    <inlineHelpText>Parent contract linked to the contract (in case of addendum for exemple)</inlineHelpText>
    <label>Parent Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>