force-app/main/default/objects/Contract__c/fields/PartnerConfirmed_By__c.field-meta.xml
<CustomField>
    <fullName>PartnerConfirmed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Confirmed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contracts11</relationshipName>
    <type>Lookup</type>
</CustomField>