force-app/main/default/objects/Contract__c/fields/PartnerSigned_Date__c.field-meta.xml
<CustomField>
    <fullName>PartnerSigned_Date__c</fullName>
    <description>Signature date of the partner</description>
    <inlineHelpText>Date de signature fournisseur</inlineHelpText>
    <label>Partner Signed Date</label>
    <type>DateTime</type>
</CustomField>