force-app/main/default/objects/Contract__c/fields/PriceListStatement_DepreciationRate_Nam1__c.field-meta.xml
<CustomField>
    <fullName>PriceListStatement_DepreciationRate_Nam1__c</fullName>
    <label>PriceListStatement DepreciationRate Nam1</label>
    <type>TextArea</type>
</CustomField>