force-app/main/default/objects/Contract__c/fields/PriceListStatement_DepreciationRate_Nam2__c.field-meta.xml
<CustomField>
    <fullName>PriceListStatement_DepreciationRate_Nam2__c</fullName>
    <label>PriceListStatement DepreciationRate Nam2</label>
    <type>TextArea</type>
</CustomField>