force-app/main/default/objects/Contract__c/fields/PriceListStatement_DepreciationRate_Nam3__c.field-meta.xml
<CustomField>
    <fullName>PriceListStatement_DepreciationRate_Nam3__c</fullName>
    <label>PriceListStatement DepreciationRate Nam3</label>
    <type>TextArea</type>
</CustomField>