force-app/main/default/objects/Contract__c/fields/PriceListStatement_DepreciationRate_Name__c.field-meta.xml
<CustomField>
    <fullName>PriceListStatement_DepreciationRate_Name__c</fullName>
    <label>PriceListStatement DepreciationRate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>