force-app/main/default/objects/Contract__c/fields/PriceListStatement_RiseRate_Name10__c.field-meta.xml
<CustomField>
    <fullName>PriceListStatement_RiseRate_Name10__c</fullName>
    <label>PriceListStatement RiseRate Name10</label>
    <type>TextArea</type>
</CustomField>