force-app/main/default/objects/Contract__c/fields/PriceListStatement_RiseRate_Name1__c.field-meta.xml
<CustomField>
    <fullName>PriceListStatement_RiseRate_Name1__c</fullName>
    <label>PriceListStatement RiseRate Name1</label>
    <type>TextArea</type>
</CustomField>