force-app/main/default/objects/Contract__c/fields/PriceListStatement_RiseRate_Name2__c.field-meta.xml
<CustomField>
    <fullName>PriceListStatement_RiseRate_Name2__c</fullName>
    <label>PriceListStatement RiseRate Name2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>