force-app/main/default/objects/Contract__c/fields/Qty10__c.field-meta.xml
<CustomField>
    <fullName>Qty10__c</fullName>
    <label>Qty10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>