force-app/main/default/objects/Contract__c/fields/Qty12__c.field-meta.xml
<CustomField>
    <fullName>Qty12__c</fullName>
    <label>Qty12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>