force-app/main/default/objects/Contract__c/fields/Retention_Rate__c.field-meta.xml
<CustomField>
    <fullName>Retention_Rate__c</fullName>
    <label>Retention Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>