force-app/main/default/objects/Contract__c/fields/Rise_Rate10__c.field-meta.xml
<CustomField>
    <fullName>Rise_Rate10__c</fullName>
    <label>Rise Rate10</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>