force-app/main/default/objects/Contract__c/fields/Rise_Rate_Exec_Date10__c.field-meta.xml
<CustomField>
    <fullName>Rise_Rate_Exec_Date10__c</fullName>
    <label>Rise Rate Exec Date10</label>
    <type>Date</type>
</CustomField>