force-app/main/default/objects/Contract__c/fields/Rise_Rate_Exec_Date1__c.field-meta.xml
<CustomField>
    <fullName>Rise_Rate_Exec_Date1__c</fullName>
    <label>Rise Rate Exec Date1</label>
    <type>Date</type>
</CustomField>