force-app/main/default/objects/Contract__c/fields/Rise_Rate_Nb__c.field-meta.xml
<CustomField>
    <fullName>Rise_Rate_Nb__c</fullName>
    <formula>IF(ISBLANK(Rise_Rate1__c), 0,1) +
IF(ISBLANK(Rise_Rate2__c), 0,1) +
IF(ISBLANK(Rise_Rate3__c), 0,1) +
IF(ISBLANK(Rise_Rate4__c), 0,1) +
IF(ISBLANK(Rise_Rate5__c), 0,1) +
IF(ISBLANK(Rise_Rate6__c), 0,1) +
IF(ISBLANK(Rise_Rate7__c), 0,1) +
IF(ISBLANK(Rise_Rate8__c), 0,1) +
IF(ISBLANK(Rise_Rate9__c), 0,1) +
IF(ISBLANK(Rise_Rate10__c), 0,1)</formula>
    <inlineHelpText>Number of rise rate declared for the period</inlineHelpText>
    <label>Rise Rate Nb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>