force-app/main/default/objects/Contract__c/fields/Rise_Rate_YE__c.field-meta.xml
<CustomField>
    <fullName>Rise_Rate_YE__c</fullName>
    <label>Rise Rate YE</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>