force-app/main/default/objects/Contract__c/fields/SimulationNumber__c.field-meta.xml
<CustomField>
    <fullName>SimulationNumber__c</fullName>
    <label>Simulation Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>